--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/gradle_wrapper.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/gradle_wrapper.adoc
@@ -90,12 +90,17 @@ All of those aspects are configurable at the time of generating the Wrapper file
 The Gradle version used for downloading and executing the Wrapper.
 The resulting distribution URL is validated before it is written to the properties file.
 +
+For Gradle versions after major version 9, the value can be specified with a major version or a minor version only.
+In that case, the latest normal Gradle version with that major or minor version will be used.
+For example, `9` and `9.1` are valid values.
++
 The following labels are allowed:
 +
 * `link:https://gradle.org/releases[latest]`
 * `link:https://gradle.org/release-candidate[release-candidate]`
-* `link:https://gradle.org/nightly[nightly]`
+* `link:https://services.gradle.org/versions/milestone[release-milestone]`
 * `link:https://gradle.org/release-nightly[release-nightly]`
+* `link:https://gradle.org/nightly[nightly]`
 
 `--distribution-type`::
 The Gradle distribution type used for the Wrapper.
