--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices.adoc
@@ -48,7 +48,7 @@ The items in this guide are meant to be _brief_, _understandable_, and _actionab
 - <<best_practices_dependencies.adoc#best_practices_for_dependencies,Best Practices for Dependencies>>
 - <<best_practices_tasks.adoc#best_practices_for_tasks,Best Practices for Tasks>>
 
-== Recommendations
+== Other Advice
 
 - <<performance.adoc#performance_gradle, Improving the Performance of Gradle Builds>>
 - <<organizing_gradle_projects.adoc#structuring_recommendations,Structuring Gradle Builds>>
