--- a/platforms/documentation/docs/src/docs/userguide/best-practices/tags_reference.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/tags_reference.adoc
@@ -48,4 +48,4 @@ Here you can find a brief explanation of all the tags used in the best practices
 `#version-catalog` :: Items that explain how to use <<version_catalogs.adoc#version-catalog,version catalogs>> to centralize dependency declarations.
 
 [[tag:properties]]
-`#properties` :: Items that are related to defining and using <<build_environment.adoc,build properties>>, such as those in `gradle.properties`, environment variables, or passed via the command line.
+`#properties` :: Items that are related to defining and using <<build_environment.adoc#build_environment,build properties>>, such as those in `gradle.properties`, environment variables, or passed via the command line.
