add new bp about grouping and describing tasks

--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -128,3 +128,56 @@ include::sample[dir="snippets/bestPractices/useCacheabilityAnnotations/groovy",f
 === Tags
 
 `<<tags_reference.adoc#tag:tasks,#tasks>>`, `<<tags_reference.adoc#tag:caching,#caching>>`
+
+[[group_describe_tasks]]
+== Group and Describe custom Tasks
+
+When defining custom tasks, always assign a clear `group` and `description`.
+
+=== Explanation
+
+A good group name is short, lowercase, and reflects the purpose or domain of the task.
+For example: `documentation`, `verification`, `release`, or `publishing`.
+This helps organize your tasks into meaningful categories and makes them easier to find in reports such as `./gradlew tasks`.
+
+Providing this metadata ensures your tasks are discoverable and understandable to other users (and to your future self).
+
+=== Example
+
+==== Don't Do This
+
+Tasks without a group appear under the "other" category in `gradle tasks` output, making them harder to locate:
+
+====
+include::sample[dir="snippets/bestPractices/groupTasks/kotlin/avoid-this",files="build.gradle.kts[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/groupTasks/groovy/avoid-this",files="build.gradle[tags=avoid-this]"]
+====
+
+[source,text]
+----
+$ gradlew tasks
+include::{snippetsPath}/bestPractices/groupTasks/tests/groupTasks.bad.out[]
+----
+
+==== Do this Instead
+
+When defining custom tasks, always assign a clear `group` and `description`:
+
+====
+include::sample[dir="snippets/bestPractices/groupTasks/kotlin/do-this",files="build.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/groupTasks/groovy/do-this",files="build.gradle[tags=do-this]"]
+====
+
+[source,text]
+----
+$ gradlew tasks
+include::{snippetsPath}/bestPractices/groupTasks/tests/groupTasks.good.out[]
+----
+
+=== References
+
+- <<writing_tasks.adoc#task_group_and_description,Task Group and Description>>
+
+=== Tags
+
+`<<tags_reference.adoc#tag:tasks,#tasks>>`
