--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -509,7 +509,7 @@ Instead of using command-line options or environment variables, set build flags 
 Gradle comes with a long list of <<build_environment.adoc#sec:gradle_configuration_properties,Gradle properties>>, which have names that begin with `org.gradle` and can be used to configure the behavior of the build tool.
 These properties can have a **major impact** on build performance, so it’s important to understand how they work.
 
-You should not rely on supplying these properties on the CLI with every Gradle invocation.
+You should not rely on supplying these properties via the command-line for every Gradle invocation.
 Providing these properties on the command line is meant for temporary testing and debugging, and is easy to forget across different environments.
 A permanent, idiomatic location to set and share these properties across different machines and between developers is in the `gradle.properties` file located in the root project directory.
 
