--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -511,7 +511,7 @@ These properties can have a **major impact** on build performance, so it’s imp
 
 You should not rely on supplying these properties via the command-line for every Gradle invocation.
 Providing these properties via the command line is intended for short-term testing and debugging purposes, but it’s prone to being forgotten or inconsistently applied across environments.
-A permanent, idiomatic location to set and share these properties across different machines and between developers is in the `gradle.properties` file located in the root project directory.
+A permanent, idiomatic location to set and share these properties is in the `gradle.properties` file located in the root project directory.
 
 You should be aware of the default values of properties your build uses and avoid explicitly setting properties to their default values.
 If Gradle ever changes the default value of a property, this will not be a silent change, but will involve a standard <<feature_lifecycle.adoc#backwards_compatibility,deprecation cycle>>.
