--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -132,21 +132,31 @@ include::sample[dir="snippets/bestPractices/useCacheabilityAnnotations/groovy",f
 [[group_describe_tasks]]
 == Group and Describe custom Tasks
 
-When defining custom tasks, always assign a clear `group` and `description`.
+When defining custom task types or registering ad-hoc tasks, always set a clear `group` and `description`.
 
 === Explanation
 
 A good group name is short, lowercase, and reflects the purpose or domain of the task.
 For example: `documentation`, `verification`, `release`, or `publishing`.
-This helps organize your tasks into meaningful categories and makes them easier to find in reports such as `./gradlew tasks`.
 
-Providing this metadata ensures your tasks are discoverable and understandable to other users (and to your future self).
+Before creating a new group, look for an existing group name that aligns with your task’s intent.
+It’s often better to reuse an established category to keep the task output organized and familiar to users.
+
+This information is used in the <<command_line_interface.adoc#sec:listing_tasks,Tasks Report>> (shown via `./gradlew tasks`) to group and describe available tasks in a readable format.
+
+Providing a group and description ensures that your tasks are:
+
+* Displayed clearly in the report
+* Categorized appropriately
+* Understandable to other users (and to your future self)
+
+NOTE: Tasks with no group are hidden from the <<command_line_interface.adoc#sec:listing_tasks,Tasks Report>> unless `--all` is specified.
 
 === Example
 
 ==== Don't Do This
 
-Tasks without a group appear under the "other" category in `gradle tasks` output, making them harder to locate:
+Tasks without a group appear under the "other" category in `gradle tasks --all` output, making them harder to locate:
 
 ====
 include::sample[dir="snippets/bestPractices/groupTasks/kotlin/avoid-this",files="build.gradle.kts[tags=avoid-this]"]
@@ -155,7 +165,7 @@ include::sample[dir="snippets/bestPractices/groupTasks/groovy/avoid-this",files=
 
 [source,text]
 ----
-$ gradlew tasks
+$ gradlew tasks --all
 include::{snippetsPath}/bestPractices/groupTasks/tests/groupTasks.bad.out[]
 ----
 
@@ -170,7 +180,7 @@ include::sample[dir="snippets/bestPractices/groupTasks/groovy/do-this",files="bu
 
 [source,text]
 ----
-$ gradlew tasks
+$ gradlew tasks --all
 include::{snippetsPath}/bestPractices/groupTasks/tests/groupTasks.good.out[]
 ----
 
