Clarify how the wrapper provisions Gradle versions
The original wording was too vague as e.g. a matching Gradle version
installed globally and available in `PATH` would not be considered by
the wrapper when checking for available versions.

Also, the path the wrapper provisions Gradle to is not necessary on the
local file system; it depends on that `GRADLE_USER_HOME` is set /
mounted to.

Signed-off-by: Sebastian Schuberth <sschuberth@gmail.com>

--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/gradle_wrapper.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/gradle_wrapper.adoc
@@ -215,7 +215,7 @@ $ gradlew.bat build
 include::{snippetsPath}/wrapper/simple/tests/wrapperBatchFileExecution.out[]
 ----
 
-If the Gradle distribution is unavailable on the machine, the Wrapper will download it and store it in the local file system.
+If the Gradle distribution was not provisioned to `GRADLE_USER_HOME` before, the Wrapper will download it and store it in `GRADLE_USER_HOME`.
 Any subsequent build invocation will reuse the existing local distribution as long as the distribution URL in the Gradle properties doesn't change.
 
 NOTE: The Wrapper shell script and batch file reside in the root directory of a single or multi-project Gradle build. You will need to reference the correct path to those files in case you want to execute the build from a subproject directory e.g. `../../gradlew tasks`.
