--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -596,6 +596,56 @@ It will now fail with an error, suggesting a review of the relevant documentatio
 
 === Behavior Changes in Tasks
 
+=== Archive tasks (Jar, Ear, War, Zip, AbstractArchiveTask) now produce reproducible archives by default
+
+In Gradle 9.0, the default behavior of archive tasks (such as `Jar`, `Ear`, `War`, `Zip`, and `AbstractArchiveTask`) has changed to produce reproducible archives by default.
+That means that:
+- File order in the archive is now deterministic.
+- Files have fixed timestamps (timestamps depends on the archive type).
+- All directories have fixed permissions set to `0755`.
+- All files have fixed permissions set to `0644`.
+
+This change improves the reproducibility of builds and ensures that the generated archives are consistent across different environments.
+
+You can restore the previous behaviour for one or more properties for your task with the next snippet:
+
+====
+[.multi-language-sample]
+=====
+.build.gradle.kts
+[source,kotlin]
+----
+tasks.withType<AbstractArchiveTask>().configureEach {
+    // File order is not deterministic
+    isReproducibleFileOrder = false
+    // File timestamps are read from the file system
+    isPreserveFileTimestamps = true
+    // Directory permissions are read from the file system
+    dirPermissions.unset()
+    // File permissions are read from the file system
+    filePermissions.unset()
+}
+----
+=====
+[.multi-language-sample]
+=====
+.build.gradle
+[source,groovy]
+----
+tasks.withType(AbstractArchiveTask).configureEach {
+    // File order is not deterministic
+    reproducibleFileOrder = false
+    // File timestamps are read from the file system
+    preserveFileTimestamps = true
+    // Directory permissions are read from the file system
+    dirPermissions.unset()
+    // File permissions are read from the file system
+    filePermissions.unset()
+}
+----
+=====
+====
+
 ==== `test` task fails when no tests are discovered
 
 When test sources are present and no filters are applied, the `test` task will now fail with an error if it runs but doesn’t discover any tests.
