--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_dependencies.adoc
@@ -237,3 +237,43 @@ include::sample[dir="snippets/bestPractices/avoidDuplicateDependencies/groovy/do
 === Tags
 
 `<<tags_reference.adoc#tag:dependencies,#dependencies>>`
+
+[[single-gav-string]]
+== Prefer the single GAV (`group:artifact:version`) String Syntax
+
+When declaring dependencies without a version catalog, prefer using the single GAV string form `implementation("org.example:library:1.0")`.
+Avoid using the multi-parameter map form unless necessary `implementation(group = "org.example", name = "library", version = "1.0")`.
+
+=== Explanation
+
+All of these formats are functionally equivalent in Gradle, but the single-string form is more concise, easier to read, and is widely adopted in the broader JVM ecosystem.
+
+This format is also recommended by link:https://central.sonatype.com/artifact/com.google.guava/guava[Maven Central] in its documentation and usage examples, making it the most familiar and consistent style for developers across tools.
+
+Use the map-style declaration only when you need to customize the dependency (for example, to <<resolution_rules.adoc#sec:exclude-trans-deps,exclude transitive dependencies>>).
+
+=== Example
+
+==== Don't Do This
+
+====
+include::sample[dir="snippets/bestPractices/useGAVString-avoid/kotlin",files="build.gradle.kts[tags=avoid-this]"]
+include::sample[dir="snippets/bestPractices/useGAVString-avoid/groovy",files="build.gradle[tags=avoid-this]"]
+====
+<1> Avoid the map notation
+
+==== Do This Instead
+
+====
+include::sample[dir="snippets/bestPractices/useGAVString-do/kotlin",files="build.gradle.kts[tags=do-this]"]
+include::sample[dir="snippets/bestPractices/useGAVString-do/groovy",files="build.gradle[tags=do-this]"]
+====
+<1> Use the string notation
+
+=== References
+
+- <<declaring_dependencies_basics.adoc#declaring-dependencies-basics,Declaring Dependencies Basics>>
+
+=== Tags
+
+`<<tags_reference.adoc#tag:dependencies,#dependencies>>`
